style: Update question card styling and fix layout issues

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -100,8 +100,10 @@ button.navbar-toggler {
     transform-style: preserve-3d;
     transition: transform 0.6s;
     width: 100%;
-    min-height: 30vh;
-    overflow: auto;
+    height: 100%;
+    overflow-y: scroll !important;
+    overflow-x: hidden !important;
+    text-wrap: balance;
     border-color: whitesmoke;
 }
 
@@ -116,13 +118,12 @@ button.navbar-toggler {
     transform: rotateY(180deg);
 }
 
-.question-card .card-front,
-.question-card .card-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-}
+// .question-card .card-front,
+// .question-card .card-back {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+// }
 
 @media (min-width: 600px) {
     .question-card .card-front {
@@ -152,6 +153,7 @@ button.navbar-toggler {
 .hidden {
     backface-visibility: hidden;
     visibility: hidden;
+    display: none;
 }
 
 .add-existing-category {
